# zlfft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake_full_test.yml  throughput.yml
benchmark/: accuracy.cpp  accuracy.py  benchmark_include.hpp  build_config.py  throughput.cpp  throughput.py  throughput_all.py
fftw3_impl/: fftw3_impl.hpp
ipp_impl/: ipp_impl.hpp
kfr_impl/: kfr_impl.hpp
pffft_impl/: pffft_impl.hpp
source/: naive_cooley_radix2.hpp  naive_stockham_dit_radix2.hpp  naive_stockham_radix2.hpp  naive_stockham_radix4.hpp  simd_low_order.hpp  simd_low_order_opt1.hpp  simd_low_order_opt2.hpp  simd_stockham_radix2.hpp  simd_stockham_radix2_kernel1.hpp  simd_stockham_radix2_kernel2.hpp  simd_stockham_radix2_kernel24.hpp  simd_stockham_radix2_kernel248.hpp  simd_stockham_radix4.hpp  simd_stockham_radix4_opt1.hpp  simd_stockham_radix4_soa.hpp  simd_stockham_radix4_soa_kernel4.hpp  simd_stockham_radix4_soa_kernel4_opt1.hpp  stockham_radix2_kernel24.hpp  stockham_radix2_kernel248.hpp  stockham_radix2_kernel4.hpp  stockham_radix2_kernel8.hpp
vdsp_impl/: vdsp_impl.hpp
zlfft_impl/: simd_low_order_aosoa.hpp  simd_low_order_aosoa1.hpp  simd_low_order_aosoa2.hpp  simd_low_order_opt1.hpp  simd_low_order_opt2.hpp  zlfft_common.hpp  zlfft_common_aosoa.hpp
