cmake_minimum_required(VERSION 3.20)
project(zlfft)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(ACCURACY_TEST "Accuracy Test" ON)
option(THROUGHPUT_TEST "Throughput Test" OFF)

if (ACCURACY_TEST)
    add_executable(zlfft_benchmark benchmark/accuracy.cpp)
endif ()
if (THROUGHPUT_TEST)
    add_executable(zlfft_benchmark benchmark/throughput.cpp)

    set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Suppressing Google benchmark's tests" FORCE)
    set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Suppressing Google benchmark's install" FORCE)
    set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "Suppressing Google benchmark's dependencies downloading" FORCE)
    add_subdirectory(google/benchmark)
    target_link_libraries(zlfft_benchmark PRIVATE benchmark::benchmark)
endif ()

target_include_directories(zlfft_benchmark PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/benchmark ${CMAKE_CURRENT_SOURCE_DIR}/source ${CMAKE_CURRENT_SOURCE_DIR}/zlfft_impl)

option(ENABLE_NAIVE_COOLEY_RADIX2 "Enable naive_cooley_radix2" OFF)
if (ENABLE_NAIVE_COOLEY_RADIX2)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_NAIVE_COOLEY_RADIX2)
endif ()

option(ENABLE_STOCKHAM_RADIX2_KERNEL24 "Enable stockham_radix2_kernel24" OFF)
if (ENABLE_STOCKHAM_RADIX2_KERNEL24)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_STOCKHAM_RADIX2_KERNEL24)
endif ()

option(ENABLE_NAIVE_STOCKHAM_RADIX4 "Enable naive_stockham_randix4" OFF)
if (ENABLE_NAIVE_STOCKHAM_RADIX4)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_NAIVE_STOCKHAM_RADIX4)
endif ()

option(ENABLE_STOCKHAM_RADIX2_KERNEL248 "Enable stockham_radix2_kernel248" OFF)
if (ENABLE_STOCKHAM_RADIX2_KERNEL248)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_STOCKHAM_RADIX2_KERNEL248)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX2 "Enable simd_stockham_radix2" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX2)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX2)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL1 "Enable simd_stockham_radix2_kernel1" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL1)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL1)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL2 "Enable simd_stockham_radix2_kernel2" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL2)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL2)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL24 "Enable simd_stockham_radix2_kernel24" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL24)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL24)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL248 "Enable simd_stockham_radix2_kernel248" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL248)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX2_KERNEL248)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX4 "Enable simd_stockham_radix4" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX4)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX4)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX4_SOA "Enable simd_stockham_radix4_soa" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX4_SOA)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX4_SOA)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX8 "Enable simd_stockham_radix8" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX8)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX8)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX4_OPT1 "Enable simd_stockham_radix4_opt1" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX4_OPT1)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX4_OPT1)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX4_SOA "Enable simd_stockham_radix4_soa_kernel4" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX4_SOA_KERNEL4)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX4_SOA_KERNEL4)
endif ()

option(ENABLE_SIMD_STOCKHAM_RADIX4_SOA_KERNEL4_OPT1 "Enable simd_stockham_radix4_soa_kernel4_opt1" OFF)
if (ENABLE_SIMD_STOCKHAM_RADIX4_SOA_KERNEL4_OPT1)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_STOCKHAM_RADIX4_SOA_KERNEL4_OPT1)
endif ()

option(ENABLE_SIMD_LOW_ORDER "Enable simd_low_order" OFF)
if (ENABLE_SIMD_LOW_ORDER)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_LOW_ORDER)
endif ()

option(ENABLE_SIMD_LOW_ORDER_OPT1 "Enable simd_low_order_opt1" OFF)
if (ENABLE_SIMD_LOW_ORDER_OPT1)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_LOW_ORDER_OPT1)
endif ()

option(ENABLE_SIMD_LOW_ORDER_OPT2 "Enable simd_low_order_opt2" OFF)
if (ENABLE_SIMD_LOW_ORDER_OPT2)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_LOW_ORDER_OPT2)
endif ()

option(ENABLE_SIMD_LOW_ORDER_AOSOA "Enable simd_low_order_aosoa" OFF)
if (ENABLE_SIMD_LOW_ORDER_AOSOA)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_SIMD_LOW_ORDER_AOSOA)
endif ()

option(ENABLE_PFFFT "Enable pffft" OFF)
if (ENABLE_PFFFT)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
        set(PFFFT_USE_SIMD_NEON ON CACHE BOOL "Enable neon in pffft" FORCE)
    endif ()
    add_subdirectory(pffft_impl/pffft)
    target_link_libraries(zlfft_benchmark PRIVATE PFFFT)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_PFFFT)
endif ()

option(ENABLE_VDSP "Enable vDSP" OFF)
if (ENABLE_VDSP)
    find_library(ACCELERATE_FRAMEWORK Accelerate)
    target_link_libraries(zlfft_benchmark PRIVATE ${ACCELERATE_FRAMEWORK})
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_VDSP)
endif ()

option(ENABLE_VDSP_STRIDE_2 "Enable vDSP stride 2" OFF)
if (ENABLE_VDSP_STRIDE_2)
    find_library(ACCELERATE_FRAMEWORK Accelerate)
    target_link_libraries(zlfft_benchmark PRIVATE ${ACCELERATE_FRAMEWORK})
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_VDSP_STRIDE_2)
endif ()

option(ENABLE_IPP "Enable Intel IPP" OFF)
if (ENABLE_IPP)
    if(WIN32)
        set(IPP_ROOT "$ENV{USERPROFILE}/.nuget/packages/intelipp.static.win-x64/2022.3.0.387")
        set(IPP_INC "${IPP_ROOT}/build/native/include/ipp")
        set(IPP_LIB "${IPP_ROOT}/build/native/win-x64/")
        set(IPP_LIBS ippsmt ippcoremt ippimt ippcvmt ippvmmt)
    elseif(UNIX)
        find_path(IPP_INC
                NAMES ippcore.h
                HINTS
                $ENV{IPPROOT}/include/ipp
                $ENV{IPPROOT}/include
                PATHS
                "/opt/intel/oneapi/include/ipp"
                "/opt/intel/oneapi/include"
                "/opt/intel/oneapi/ipp/latest/include"
        )
        find_library(IPP_CORE_LIB
                NAMES ippcore
                HINTS
                $ENV{IPPROOT}/lib
                $ENV{IPPROOT}/lib/intel64
                PATHS
                "/opt/intel/oneapi/lib"
                "/opt/intel/oneapi/ipp/latest/lib/intel64"
        )
        if (IPP_INC AND IPP_CORE_LIB)
            get_filename_component(IPP_LIB "${IPP_CORE_LIB}" DIRECTORY)
            set(IPP_LIBS ipps ippcore ippi ippcv ippvm)
            set(IPP_ROOT "${IPP_INC}")
            message(STATUS "Dynamically located IPP Headers at: ${IPP_INC}")
            message(STATUS "Dynamically located IPP Libraries at: ${IPP_LIB}")
        else()
            message(WARNING "CMake could not locate Intel IPP headers or libraries.")
        endif()
    endif()
    if (IS_DIRECTORY "${IPP_ROOT}")
        message(STATUS "INTEL IPP FOUND at ${IPP_ROOT}")
        target_include_directories(zlfft_benchmark PRIVATE "${IPP_INC}")
        target_link_directories(zlfft_benchmark PRIVATE "${IPP_LIB}")
        target_link_libraries(zlfft_benchmark PRIVATE ${IPP_LIBS})
        target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_IPP)
    else ()
        message(STATUS "INTEL IPP NOT LOADED: ${IPP_ROOT} was not found")
    endif ()
endif ()

option(ENABLE_KFR "Enable kfr" OFF)
if (ENABLE_KFR)
    set(KFR_USE_BOOST_MATH OFF CACHE BOOL "Disable Boost Math usage in kfr" FORCE)
    set(KFR_USE_BOOST OFF CACHE BOOL "Disable Boost usage in kfr" FORCE)
    set(KFR_ENABLE_MULTIARCH OFF CACHE BOOL "Disable kfr SIMD runtime dispatch" FORCE)
    if(NOT (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64"))
        set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "Set to OSX x86_64" FORCE)
        set(KFR_ARCH "avx2" CACHE STRING "Set SIMD set to AVX2 in kfr" FORCE)
    endif()
    add_subdirectory(kfr_impl/kfr)
    target_link_libraries(zlfft_benchmark PRIVATE kfr kfr_dft)
    target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_KFR)
endif ()

option(ENABLE_FFTW3 "Enable fftw3" OFF)
option(ENABLE_FFTW3_ESTIMATE "Enable fftw3 estimate" OFF)
if (ENABLE_FFTW3 OR ENABLE_FFTW3_ESTIMATE)
    set(BUILD_TESTS OFF CACHE BOOL "Disable fftw3 tests" FORCE)
    set(ENABLE_FLOAT ON CACHE BOOL "Enable single precision support in fftw3" FORCE)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
        set(ENABLE_NEON ON CACHE BOOL "Enable NEON in fftw3" FORCE)
    else ()
        set(ENABLE_AVX2 ON CACHE BOOL "Enable AVX2 in fftw3" FORCE)
    endif ()
    if (NOT TARGET fftw3f)
        add_subdirectory(fftw3_impl/fftw3 EXCLUDE_FROM_ALL)
    endif ()
    if (TARGET fftw3f)
        get_target_property(_fftw_defs fftw3f COMPILE_DEFINITIONS)
        if (_fftw_defs)
            list(REMOVE_ITEM _fftw_defs "/bigobj")
            set_target_properties(fftw3f PROPERTIES COMPILE_DEFINITIONS "${_fftw_defs}")
        endif()
        
        # Re-apply it correctly as a compile option for MSVC-like compilers
        if (MSVC)
            target_compile_options(fftw3f PRIVATE "/bigobj")
        endif()
    endif()
    target_link_libraries(zlfft_benchmark PRIVATE fftw3f)
    target_include_directories(zlfft_benchmark PRIVATE fftw3_impl/fftw3/api)
    if (ENABLE_FFTW3)
        target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_FFTW3)
    endif ()
    if (ENABLE_FFTW3_ESTIMATE)
        target_compile_definitions(zlfft_benchmark PRIVATE ENABLE_FFTW3_ESTIMATE)
    endif ()
endif ()

set(HWY_ENABLE_EXAMPLES OFF CACHE BOOL "Disable Highway examples" FORCE)
set(HWY_ENABLE_TESTS OFF CACHE BOOL "Disable Highway tests" FORCE)
set(HWY_ENABLE_CONTRIB OFF CACHE BOOL "Disable Highway contrib" FORCE)

add_subdirectory(google/highway)
target_link_libraries(zlfft_benchmark PRIVATE hwy)

if (MSVC)
    target_compile_options(zlfft_benchmark PRIVATE $<$<CONFIG:RELEASE>:/fp:precise>)
else ()
    target_compile_options(zlfft_benchmark PRIVATE $<$<CONFIG:RELEASE>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
    target_compile_options(zlfft_benchmark PRIVATE $<$<CONFIG:RelWithDebInfo>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
endif ()

if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
    target_compile_options(zlfft_benchmark PRIVATE "-march=armv8-a+simd")
else ()
    target_compile_options(zlfft_benchmark PRIVATE "-march=skylake")
endif ()
target_compile_definitions(zlfft_benchmark PRIVATE HWY_COMPILE_ONLY_STATIC)

include(CheckIPOSupported)
check_ipo_supported(RESULT ipo_supported OUTPUT error)

if (ipo_supported)
    message(STATUS "LTO/IPO is supported and enabled.")
    set_target_properties(zlfft_benchmark PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
else ()
    message(WARNING "LTO/IPO is not supported: ${error}")
endif ()
